# Datacenter-Inventory-System

./: .dockerignore  Architecture_Overview.md  CLAUDE.md  DC_Inventory_ToR_v3.docx  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/reviews/: sprint-4-local-review.md  sprint-5-task-4-review.md
alembic/: README.md  env.py
app/: config.py  main.py
app/api/v1/: devices.py  health.py  meta.py  qr.py
app/db/: models.py  session.py
app/db/models/: __init__.py  qr.py
app/db/repositories/: __init__.py  errors.py  qr_batch.py  qr_code.py
app/domain/: qr.py
app/netbox/: client.py  errors.py  models.py
app/services/: comment.py  device.py  device_form.py  meta.py  netbox_write.py
app/services/forms/: device_create.yaml
app/services/qr/: __init__.py  generation.py  lifecycle.py  lookup.py
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: script.py.mako
backend/alembic/versions/: 068437e38dd9_initial_empty.py  a1b2c3d4e5f6_qr_batches_qr_codes_audit_log.py  b2c3d4e5f6a7_idempotency_keys.py  c3d4e5f6a7b8_shift_sessions.py  d4e5f6a7b8c9_rename_shift_end_reason_to_tor_canon.py
backend/app/: config.py  main.py
backend/app/api/v1/: _helpers.py  devices.py  health.py  me.py  meta.py  qr.py  racks.py  sessions.py
backend/app/api/v1/admin/: __init__.py  audit.py  batches.py  dashboard.py  sessions.py
backend/app/auth/: dependencies.py  jwks.py  keycloak_admin.py
backend/app/db/models/: __init__.py  audit.py  idempotency.py  shift_session.py
backend/app/db/repositories/: __init__.py  audit_log.py  dashboard.py  qr_batch.py  qr_code.py  shift_session.py
backend/app/domain/: __init__.py  audit.py  dashboard.py  qr.py  shift_session.py
backend/app/middleware/: rate_limit.py
backend/app/netbox/: client.py  errors.py
backend/app/observability/: logging.py  request_id.py
backend/app/services/: auto_end_job.py  cache.py  device.py  device_decommission.py  device_form.py  idempotency.py  meta.py  netbox_write.py  pdf_labels.py  rack_elevation.py  shift_session.py
backend/app/services/forms/: device_create.yaml  device_edit.yaml
backend/app/services/qr/: generation.py  lifecycle.py  token.py
backend/app/web/: auth.py  oidc.py  router.py  sse.py  templating.py  users.py
backend/app/web/static/: admin.css  scan-poc.html
backend/app/web/templates/: _admin_shift_needed.html  _base.html  _dashboard_placeholder.html  _not_found.html  dashboard.html
backend/app/web/templates/audit/: detail.html  list.html
backend/app/web/templates/batches/: detail.html  list.html  new.html
backend/app/web/templates/devices/: decommission.html  detail.html  search.html
backend/app/web/templates/qr/: rebind.html  search.html
backend/app/web/templates/sessions/: list.html
backend/app/web/templates/users/: detail.html  list.html
backend/scripts/: backup.sh  idempotency_cleanup.sh  perf_baseline.py  restore.sh  restore_validate.sh
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_active_shift_gate.py  test_admin_audit.py  test_admin_sessions.py  test_audit_log_repository.py  test_auto_end_job.py  test_circuit_breaker.py  test_dashboard_repository.py  test_db.py  test_device_comments.py  test_device_create.py  test_device_decommission.py  test_devices.py  test_health.py  test_lookup.py  test_main_lifespan.py  test_migrations.py  test_netbox_write.py  test_qr_bind.py  test_qr_retire.py  test_rate_limit.py  test_repositories.py  test_shift_session_repository.py  test_shift_sessions_migration.py
backend/tests/integration/web/: test_audit_pages.py  test_batches_pages.py  test_dashboard_page.py  test_oidc_flow.py  test_sessions_pages.py
backend/tests/unit/: test_config.py  test_db_session.py  test_main.py  test_request_id.py  test_request_id_middleware.py  test_smoke.py
backend/tests/unit/api/v1/: conftest.py  test_admin_audit.py  test_admin_audit_csv.py  test_admin_batches_list_and_pdf.py  test_admin_dashboard.py  test_admin_sessions.py  test_batches.py  test_device_comments.py  test_device_decommission.py  test_device_search.py  test_devices.py  test_health.py  test_helpers.py  test_me.py  test_meta.py  test_qr_bind.py  test_qr_rebind.py  test_qr_retire.py  test_qr_unbind.py  test_racks.py  test_sessions.py
backend/tests/unit/auth/: test_dependencies.py  test_jwks.py  test_keycloak_admin.py
backend/tests/unit/domain/: test_audit.py  test_qr.py  test_shift_session.py
backend/tests/unit/middleware/: test_rate_limit.py
backend/tests/unit/netbox/: test_client.py
backend/tests/unit/services/: test_auto_end_job.py  test_cache.py  test_device.py  test_device_decommission.py  test_device_form.py  test_health_backups.py  test_idempotency.py  test_meta.py  test_netbox_write.py  test_pdf_labels.py  test_rack_elevation.py  test_shift_session.py
backend/tests/unit/services/qr/: test_generation.py  test_lifecycle.py  test_lookup.py
backend/tests/unit/web/: test_auth.py  test_router.py
docs/: backend-tz-qr-rebind.md  backend-tz-qr-unbind.md  backend-tz-rack-elevation.md  backup.md  bug-report-meta-statuses-500.md  cron.md  deploy.md  keycloak-otp-flow.md  keycloak-pin-flow.md  keycloak-theme.md  mobile-api-guide.md  nginx.example.conf  parking-lot.md  sprint-1.md  sprint-10.md  sprint-2.md  sprint-3.md  sprint-4.md  sprint-5.md  sprint-6.md  sprint-7.md  sprint-8.md  sprint-8b.md  sprint-9.md  work-log.md
keycloak-providers/dcinv-mobile-pin/: .gitignore  pom.xml
scripts/: entrypoint.sh
tests/: conftest.py
tests/integration/: conftest.py  test_device_decommission.py  test_devices.py  test_generation.py  test_idempotency.py  test_netbox_write.py  test_qr_retire.py  test_repositories.py
tests/unit/: test_config.py  test_logging.py  test_request_id_middleware.py  test_smoke.py
tests/unit/auth/: conftest.py  test_dependencies.py  test_jwks.py
tests/unit/netbox/: test_client.py  test_models.py
(+39 files in other folders)
