[project]
name = "dcinv-backend"
version = "0.1.0"
description = "Datacenter inventory backend — QR-based mobile workflow over NetBox"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<1.15",
    "httpx>=0.28,<0.29",
    "python-jose[cryptography]>=3.3,<3.4",
    "structlog>=24.4,<25",
    "pydantic-settings>=2.6,<3",
    "pyyaml>=6.0,<7",
    # Sprint 8a Task 2: NetBox circuit breaker (Architecture §3.3, deferred
    # since Sprint 3). Pure-Python, no transitive deps. Pre-approved at
    # Sprint 8 plan stage (decision E); rationale in Sprint 8a work-log.
    "circuitbreaker>=2.0,<3",
    # Sprint 8b Task 0: Jinja2 templates for /web/* admin pages. FastAPI's
    # documented standard for HTML rendering. Pre-approved at Sprint 8b
    # plan stage (decision J).
    "jinja2>=3.1,<4",
    # Sprint 8b Task 2: PDF batch-label generation (Architecture §6).
    # Pure-Python, no system deps; reportlab.graphics.barcode.qr renders
    # QR codes so no separate qrcode dependency is needed. Pre-approved
    # at Sprint 8b plan stage (decision F).
    "reportlab>=4.0,<5",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=6.0,<7",
    "respx>=0.22,<0.24",
    "ruff>=0.8,<0.9",
    "black>=24.10,<25",
    "mypy>=1.13,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: tests that require a running database",
    "contract: tests that verify external API contracts via respx",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "B",
    "UP",
    "ASYNC",
    "T20",
    "RUF",
]
ignore = [
    "E501",
    # B008: function call in default arg. FastAPI's `Depends(...)` pattern requires it.
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
files = ["app", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# python-jose ships no type stubs; the third-party `types-python-jose` is incomplete.
# Treat the module as untyped rather than adding a brittle stub dep.
module = "jose.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# PyYAML ships no type stubs; treat as untyped rather than adding `types-PyYAML`
# as a second dependency (same call as `jose.*` above).
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# circuitbreaker ships no type stubs and no PyPI types-* companion package;
# treat as untyped (same call as `jose.*` / `yaml.*`).
module = "circuitbreaker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# reportlab ships no type stubs; the third-party `types-reportlab` is
# incomplete. Treat the module as untyped rather than adding a brittle
# stub dep (same call as `jose.*` / `yaml.*` / `circuitbreaker.*`).
module = "reportlab.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
